I updated the footer spacing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="supported-color-schemes" content="light dark">
     <meta name="x-apple-disable-message-reformatting">
     <!-- SUBJECT LINE GOES BETWEEN title TAGS BELOW-->
-    <title>Opulent Origins</title>
+    <title>Osculant Origins</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ0FFVTG9R"></script>
     <script>
@@ -179,7 +179,7 @@
   </div> -->
   <!-- Visually Hidden Preview Text : END -->
 
-  <body style="background-color: #cccccc;">
+  <body style="background-color: #cccccc;Margin: 0 auto;">
     <!--BEGIN Pre-text area-->
     <!-- <table style="margin: 0px auto; WIDTH: 600px" class="container" role="presentation" border="0" cellSpacing="0"
       cellPadding="0" width="100%" align="center">
@@ -250,8 +250,9 @@
                     <tr>
                       <td align="center"
                         style=" color: #fff; font-family: arial, sans-serif; font-size: 15px; text-align: center;">
-                        <a href="#"><img src="https://i.ibb.co/6Y8WSCq/oo-hero-image.jpg" alt="hero image" width="600"
-                            height="" border="0" style="width: 100%; max-width: 600px; height: auto; display: block;">
+                        <a href="#"><img src="https://i.ibb.co/fxPQ6Jp/osculent-Origins.jpg" alt="hero image"
+                            width="600" height="" border="0"
+                            style="width: 100%; max-width: 600px; height: auto; display: block;">
                         </a>
                       </td>
                     </tr>
@@ -276,7 +277,7 @@
                           style="color: #000;font-size: 36px;text-align: center;text-transform: uppercase;Margin: 0;line-height: 36px;">
                           LOREM IPSM DOLOR SIT AMET</h2> -->
                         <p
-                          style="text-align: left;font-size: 20px;font-family: 'Montserrat', sans-serif;font-weight: 500;color: #393939;line-height: 30px;margin:0;padding:8px;">
+                          style="text-align: left;font-size: 20px;font-family: 'Montserrat', sans-serif;font-weight: 600;color: #393939;line-height: 30px;margin:0;padding:8px;">
                           Lorem ipsum, dolor sit amet consectetur
                           adipisicing elit.
                           Excepturi cum commodi impedit quaerat voluptates minima optio.
@@ -357,7 +358,7 @@
                             </v:roundrect>
                           <![endif]--><a href="#"
                         style="padding:4px;background: rgb(201,179,217);
-                      background: linear-gradient(180deg, rgba(201,179,217,1) 0%, rgba(151,114,198,1) 100%);border-radius:50px;color:#FFFFFF;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:100%;max-width:560px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Shop
+                      background: linear-gradient(180deg, rgba(201,179,217,1) 0%, rgba(151,114,198,1) 100%);border-radius:50px;color:#FFFFFF;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:100%;max-width:400px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Shop
                         Now</a>
                     </div>
                     <!-- /CTA -->
@@ -393,7 +394,7 @@
             <!-- End of Image 1 -->
             <!-- spacer -->
             <tr>
-              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="40"
+              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="20"
                 style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
                 &nbsp;
               </td>
@@ -479,12 +480,12 @@
               </td>
             </tr> -->
             <!-- spacer -->
-            <tr>
-              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="40"
+            <!-- <tr>
+              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="10"
                 style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
                 &nbsp;
               </td>
-            </tr>
+            </tr> -->
             <!-- end of spacer -->
             <!-- Start of Product Sections -->
             <tr>
@@ -535,7 +536,7 @@
                                       </v:roundrect>
                                     <![endif]-->
                                 <a href="#"
-                                  style="padding: 0;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;border-bottom:2px solid #9772c6;">Shop
+                                  style="padding: 0;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Shop
                                   Now &nbsp;></a>
                               </div>
                               <!-- /CTA -->
@@ -596,7 +597,7 @@
                               </v:roundrect>
                             <![endif]-->
                         <a href="#"
-                          style="padding: 0px;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;border-bottom:2px solid #9772c6;">Shop
+                          style="padding: 0px;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Shop
                           Now &nbsp;></a>
                       </div>
                       <!-- /CTA -->
@@ -662,7 +663,7 @@
                                 </v:roundrect>
                               <![endif]-->
                           <a href="#"
-                            style="padding: 0px;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;border-bottom:2px solid #9772c6;">Shop
+                            style="padding: 0px;background: #FFFFFF;color:#FFFFFF;color:#9772c6;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;width:130px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Shop
                             Now &nbsp;></a>
                         </div>
                         <!-- /CTA -->
@@ -679,7 +680,7 @@
       <!-- End of Product Sections -->
       <!-- spacer -->
       <tr>
-        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="80"
+        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="60"
           style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
           &nbsp;
         </td>
@@ -705,6 +706,9 @@
                     style="background-color: #FFFFFF; ">
                     <tr>
                       <td align="center" width="100%" valign="middle" style="border-radius:4px;">
+                        <p
+                          style="font-size:50px;font-weight: 600;color: #393939;margin:0 0 20px 0;line-height: 48px;text-transform: uppercase;text-align: left;">
+                          volupt ati bus quas debitis elit</p>
                         <a href="#">
                           <img width="100%"
                             style="background-position: center;background-repeat: no-repeat;background-size: cover;object-fit: cover;width: 100%;display: block;"
@@ -768,19 +772,17 @@
       <!-- End of Divider -->
       <!-- spacer -->
       <tr>
-        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="30"
+        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="20"
           style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
           &nbsp;
         </td>
       </tr>
       <tr>
-        <td align="left" width="100%" style="background-color: #FFFFFF;padding: 0 24px;line-height: 30px;">
-          <h2
-            style="font-size:50px;font-weight: 600;color: #393939;margin:0;line-height: 50px;text-transform: uppercase;">
-            volupt ati bus quas debitis elit</h2>
-          <p style="color: #393939;font-size:20px;font-weight: 500;">Lorem, ipsum dolor sit amet consectetur
+        <td align="left" width="100%" style="background-color: #FFFFFF;padding: 0 24px;margin:0;line-height: 30px;">
+          <p style="color: #393939;font-size:20px;font-weight: 600;margin:0;line-height: 30px;">Lorem, ipsum dolor sit
+            amet consectetur
             adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium debitis
-            error, molestiae eveniet voluptates quas.</p>
+            error, molestiae eveniet voluptates quas debitis.</p>
         </td>
       </tr>
       <!-- spacer -->
@@ -803,7 +805,7 @@
                                 Shop Now</center>
                             </v:roundrect>
                           <![endif]--><a href="#"
-                  style="padding:4px;background: #FFFFFF;border:2px solid #393939;border-radius:50px;color:#393939;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:100%;max-width:560px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Try
+                  style="padding:4px;background: #FFFFFF;border:2px solid #393939;border-radius:50px;color:#393939;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:100%;max-width:400px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Try
                   a Free Trial</a>
               </div>
               <!-- /CTA -->
@@ -835,7 +837,7 @@
                           <img src="https://i.ibb.co/sFkJrkR/Logo.png" alt="" width="70"
                             style="background-position: center center;background-repeat: no-repeat;background-size: cover;object-fit: cover;max-width: 100%;display: block;min-width:70px;">
                         </a>
-                        <p style="color: #393939;font-size: 28px;font-family: Arial, Helvetica, sans-serif;">Opulent
+                        <p style="color: #393939;font-size: 28px;font-family: Arial, Helvetica, sans-serif;">Osculant
                           Origins</p>
                       </td>
                     </tr>
@@ -844,7 +846,7 @@
               </tr>
               <!-- End of Helios Logo -->
               <tr>
-                <td aria-hidden="true" height="40" style="font-size: 0; line-height: 0px;">
+                <td aria-hidden="true" height="30" style="font-size: 0; line-height: 0px;">
                   &nbsp;
                 </td>
               </tr>
@@ -858,7 +860,7 @@
                           style="font-size: 20px;font-family: 'Poppins', sans-serif;color:#393939;font-weight: 600;margin:0;">
                           Contact</h3>
                         <p
-                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;color:#000000;font-weight:600;line-height: 30px;">
+                          style="font-size: 18px;font-family: 'Montserrat', sans-serif;color:#000000;font-weight:600;line-height: 30px;">
                           <!-- add your email -->
                           <a style="text-decoration: underline;color:#393939;text-underline-offset: 3px;font-weight:500;font-size:16px;"
                             href="mailto:john.doe@example.com">jane.doe@example.com</a>
@@ -873,7 +875,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td aria-hidden="true" height="40" style="font-size: 0; line-height: 0px;">
+                      <td aria-hidden="true" height="50" style="font-size: 0; line-height: 0px;">
                         &nbsp;
                       </td>
                     </tr>
@@ -892,7 +894,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td aria-hidden="true" height="40" style="font-size: 0; line-height: 0px;">
+                      <td aria-hidden="true" height="36" style="font-size: 0; line-height: 0px;">
                         &nbsp;
                       </td>
                     </tr>
@@ -942,7 +944,7 @@
                             </td>
                           </tr>
                           <tr>
-                            <td aria-hidden="true" height="40" style="font-size: 0; line-height: 0px;">
+                            <td aria-hidden="true" height="30" style="font-size: 0; line-height: 0px;">
                               &nbsp;
                             </td>
                           </tr>
@@ -966,7 +968,7 @@
               </tr>
               <!-- End of Contact -->
               <tr>
-                <td aria-hidden="true" height="50" style="font-size: 0; line-height: 0px;">
+                <td aria-hidden="true" height="20" style="font-size: 0; line-height: 16px;">
                   &nbsp;
                 </td>
               </tr>
@@ -974,12 +976,12 @@
               <tr>
                 <td>
                   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                    style="max-width: 600px;padding: 30px 0px;">
+                    style="max-width: 600px;padding: 16px 0px;">
                     <tr>
                       <td align="center">
                         <p
-                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:400;color: #393939;">
-                          Copyright&copy; 2024 Opulent Origins</p>
+                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:400;color: #393939;white-space: nowrap;">
+                          Copyright&copy; 2024 Osculant Origins</p>
                       </td>
                     </tr>
                   </table>
