I made the footer text to 16px

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
                               <h2 style="font-size:24px;font-weight: 600;color: #393939;margin:0;"><span
                                   style="font-size:16px;font-weight: 400;">Product 1</span><br>Title Goes Here</h2>
-                              <p style="color: #393939;font-size:18px;font-weight: 400;">Lorem, ipsum dolor sit amet
+                              <p style="color: #393939;font-size:18px;font-weight: 00;">Lorem, ipsum dolor sit amet
                                 consectetur
                                 adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium
                                 debitis
@@ -955,7 +955,7 @@
                     <tr>
                       <td align="center" style="line-height: 30px;">
                         <!-- add a link to email marketing service provider (ESP) -->
-                        <p style="color:#393939;font-size: 14px;font-weight: 400;">You’re receiving this email
+                        <p style="color:#393939;font-size: 16px;font-weight: 400;">You’re receiving this email
                           because
                           <br> you subscribed to Helios Newsletter <br><a
                             style="text-decoration: underline;color: #393939;text-underline-offset:3px;"
@@ -968,7 +968,7 @@
               </tr>
               <!-- End of Contact -->
               <tr>
-                <td aria-hidden="true" height="20" style="font-size: 0; line-height: 16px;">
+                <td aria-hidden="true" height="40" style="font-size: 0; line-height: 16px;">
                   &nbsp;
                 </td>
               </tr>
@@ -976,11 +976,11 @@
               <tr>
                 <td>
                   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                    style="max-width: 600px;padding: 16px 0px;">
+                    style="max-width: 600px;padding: 0px;">
                     <tr>
                       <td align="center">
                         <p
-                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:400;color: #393939;white-space: nowrap;">
+                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:400;color: #393939;white-space: nowrap;margin: 16px 0;">
                           Copyright&copy; 2024 Osculant Origins</p>
                       </td>
                     </tr>
