I double checked for the correct font for email content

--- a/index.html
+++ b/index.html
@@ -515,9 +515,12 @@
                           cellpadding="0" role="presentation">
                           <tr>
                             <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
-                              <h2 style="font-size:24px;font-weight: 600;color: #393939;margin:0;"><span
-                                  style="font-size:16px;font-weight: 400;">Product 1</span><br>Title Goes Here</h2>
-                              <p style="color: #393939;font-size:18px;font-weight: 00;">Lorem, ipsum dolor sit amet
+                              <p
+                                style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
+                                <span style="font-size:16px;font-weight: 400;">Product 1</span><br>Title Goes Here</p>
+                              <p
+                                style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
+                                Lorem, ipsum dolor sit amet
                                 consectetur
                                 adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium
                                 debitis
@@ -578,9 +581,11 @@
                   cellpadding="0" role="presentation">
                   <tr>
                     <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
-                      <h2 style="font-size:24px;font-weight: 600;color: #393939;margin:0;"><span
-                          style="font-size:16px;font-weight: 400;">Product 2</span><br>Title Goes Here</h2>
-                      <p style="color: #393939;font-size:18px;font-weight: 400;">Lorem, ipsum dolor sit amet consectetur
+                      <p
+                        style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
+                        <span style="font-size:16px;font-weight: 400;">Product 2</span><br>Title Goes Here</p>
+                      <p style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
+                        Lorem, ipsum dolor sit amet consectetur
                         adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium debitis
                         error, molestiae eveniet?</p>
                       <!-- <a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89">
@@ -643,9 +648,12 @@
                   <tbody>
                     <tr>
                       <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
-                        <h2 style="font-size:24px;font-weight: 600;color: #393939;margin:0;"><span
-                            style="font-size:16px;font-weight: 400;">Product 3</span><br>Title Goes Here</h2>
-                        <p style="color: #393939;font-size:18px;font-weight: 400;">Lorem, ipsum dolor sit amet
+                        <p
+                          style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
+                          <span style="font-size:16px;font-weight: 400;">Product 3</span><br>Title Goes Here</p>
+                        <p
+                          style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
+                          Lorem, ipsum dolor sit amet
                           consectetur
                           adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium debitis
                           error, molestiae eveniet?</p>
@@ -778,7 +786,8 @@
         </td>
       </tr>
       <tr>
-        <td align="left" width="100%" style="background-color: #FFFFFF;padding: 0 24px;margin:0;line-height: 30px;">
+        <td align="left" width="100%"
+          style="background-color: #FFFFFF;padding: 0 24px;margin:0;line-height: 30px;font-family: 'Montserrat', sans-serif;">
           <p style="color: #393939;font-size:20px;font-weight: 600;margin:0;line-height: 30px;">Lorem, ipsum dolor sit
             amet consectetur
             adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium debitis
@@ -856,9 +865,9 @@
                   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                     <tr>
                       <td align="center" style="padding:24px 0ox;line-height: 25px;">
-                        <h3
+                        <p
                           style="font-size: 20px;font-family: 'Poppins', sans-serif;color:#393939;font-weight: 600;margin:0;">
-                          Contact</h3>
+                          Contact</p>
                         <p
                           style="font-size: 18px;font-family: 'Montserrat', sans-serif;color:#000000;font-weight:600;line-height: 30px;">
                           <!-- add your email -->
@@ -881,9 +890,9 @@
                     </tr>
                     <tr>
                       <td align="center" style="line-height: 24px;">
-                        <h3
+                        <p
                           style="font-size: 20px;font-family: 'Poppins', sans-serif;font-weight:600;color:#393939;margin:0;">
-                          Address</h3>
+                          Address</p>
                         <p
                           style="font-size: 16px;font-family: 'Montserrat', sans-serif;color:#393939;font-weight: 500;line-height: 30px;">
                           3882 Upper
@@ -980,7 +989,7 @@
                     <tr>
                       <td align="center">
                         <p
-                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:400;color: #393939;white-space: nowrap;margin: 16px 0;">
+                          style="font-size: 16px;font-family: 'Montserrat', sans-serif;font-weight:600;color: #393939;white-space: nowrap;margin: 16px 0;">
                           Copyright&copy; 2024 Osculant Origins</p>
                       </td>
                     </tr>
