I imported the fonts and added Imperial Script to company name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <![endif]-->
 
   <style type="text/css">
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Imperial+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
     :root {
       color-scheme: light dark;
@@ -517,7 +517,8 @@
                             <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
                               <p
                                 style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
-                                <span style="font-size:16px;font-weight: 400;">Product 1</span><br>Title Goes Here</p>
+                                <span style="font-size:16px;font-weight: 400;">Product 1</span><br>Title Goes Here
+                              </p>
                               <p
                                 style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
                                 Lorem, ipsum dolor sit amet
@@ -583,7 +584,8 @@
                     <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
                       <p
                         style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
-                        <span style="font-size:16px;font-weight: 400;">Product 2</span><br>Title Goes Here</p>
+                        <span style="font-size:16px;font-weight: 400;">Product 2</span><br>Title Goes Here
+                      </p>
                       <p style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
                         Lorem, ipsum dolor sit amet consectetur
                         adipisicing elit. Voluptates quas maxime ad laboriosam voluptatibus ea accusantium debitis
@@ -650,7 +652,8 @@
                       <td class="right-content" align="left" style="padding-left: 30px;line-height: 28px;">
                         <p
                           style="font-size:24px;font-weight: 600;color: #393939;margin:0;font-family: 'Poppins', sans-serif;">
-                          <span style="font-size:16px;font-weight: 400;">Product 3</span><br>Title Goes Here</p>
+                          <span style="font-size:16px;font-weight: 400;">Product 3</span><br>Title Goes Here
+                        </p>
                         <p
                           style="color: #393939;font-size:18px;font-weight: 600;font-family: 'Montserrat', sans-serif;">
                           Lorem, ipsum dolor sit amet
@@ -846,7 +849,9 @@
                           <img src="https://i.ibb.co/sFkJrkR/Logo.png" alt="" width="70"
                             style="background-position: center center;background-repeat: no-repeat;background-size: cover;object-fit: cover;max-width: 100%;display: block;min-width:70px;">
                         </a>
-                        <p style="color: #393939;font-size: 28px;font-family: Arial, Helvetica, sans-serif;">Osculant
+                        <p
+                          style="color: #393939;font-size: 50px;font-family: 'Imperial Script', 'Poppins', cursive;margin:16px 0;">
+                          Osculant
                           Origins</p>
                       </td>
                     </tr>
@@ -903,7 +908,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td aria-hidden="true" height="36" style="font-size: 0; line-height: 0px;">
+                      <td aria-hidden="true" height="50" style="font-size: 0; line-height: 0px;">
                         &nbsp;
                       </td>
                     </tr>
@@ -960,7 +965,6 @@
                         </table>
                       </td>
                     </tr>
-
                     <tr>
                       <td align="center" style="line-height: 30px;">
                         <!-- add a link to email marketing service provider (ESP) -->
